--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+<meta charset="utf-8">
+<title>Jack's Development</title>
+
 <link href="main.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="main.js"></script>
 <div id="header">
@@ -13,8 +16,9 @@
     <h1 class="title">Jack's Development Profile</h1>
   </nav>
 </div>
-<meta charset="utf-8">
-<title>Jack's Development</title>
-</head><body>
+
+</head>
+
+<body>
 </body>
 </html>
