--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Jack's Development</title>
-
-<link href="main.css" rel="stylesheet" type="text/css">
+<title>Jack's Development</title> 
+<link href="css/main.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="css/animations.css">
+<script src="https://use.fonticons.com/0fb8ea68.js"></script>
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <div id="header">
-  <nav>
+  <nav class="slideDown">
     <ul class="list">
-      <li><a href="/games.html">Game Making</a></li>
-      <li><a href="/programming.php">Programming</a></li>
-      <li><a href="/index.php">Home</a></li>
+      <li><a href="/games.html">Game Making <i class="icon icon-cubes icon-3x "></i></a></li>
+      <li><a href="/programming.php">Programming <i class="icon icon-code icon-3x"></i></a></li>
+      <li><a href="/index.php">Home<br/><i class="icon icon-linux icon-3x"></i></a></li>
     </ul>
     <h1 class="title">Jack's Development Profile</h1>
   </nav>
@@ -20,5 +22,8 @@
 </head>
 
 <body>
+<div id="home">
+</div>
+
 </body>
 </html>
