--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <link rel="stylesheet" href="css/animations.css">
 <script src="https://use.fonticons.com/0fb8ea68.js"></script>
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="main.js"></script>
 <div id="header">
-  <nav class="slideDown">
+  <nav class="pullDown">
     <ul class="list">
       <li><a href="/games.html">Game Making <i class="icon icon-cubes icon-3x "></i></a></li>
       <li><a href="/programming.php">Programming <i class="icon icon-code icon-3x"></i></a></li>
